--- a/src/scss/globals/_buttons-globals.scss
+++ b/src/scss/globals/_buttons-globals.scss
@@ -1,47 +1,27 @@
-@import "../partials/variables";
+@import '../partials/buttons';
 
 // buttons
 
 :global button :local {
-  border: none;
-  width: 100%;
-  height: $buttonHeight;
-  background-color: $green;
-  color: #ffffff;
-  cursor: pointer;
-  font-family: $CentraleSansPro;
-  font-size: 13px;
-  font-stretch: normal;
-  font-style: normal;
-  font-weight: bold;
-  letter-spacing: 0.5px;
-  line-height: 42px;
-  outline: none;
-  text-transform: uppercase;
+  @extend %button;
 }
 
 :global .button-orange :local {
-  background-color: $orange;
+  @extend %button-orange;
 }
 
 :global .button-brown :local {
-  background-color: $brown;
+  @extend %button-brown;
 }
 
 :global .button-border-slate-grey :local {
-  border: solid 1px $slate-grey;
-  background-color: transparent;
-  color: $slate-grey;
+  @extend %button-border-slate-grey;
 }
 
 :global .button-border-dark-gray :local {
-  border: solid 1px $dark-gray;
-  background-color: transparent;
-  color: $dark-gray;
+  @extend %button-border-dark-gray;
 }
 
 :global .button-border-red :local {
-  border: solid 1px #e51616;
-  background-color: transparent;
-  color: #e51616;
+  @extend %button-border-red;
 }
